output/illustrative_examples/figure8_TJ/explanation_from_other_techniques/explanation_PEM_2.7.txt
line 3
    print ("Xxxx " + name + "Xxx ")*,num
                                    ^
SyntaxError: invalid syntax